--- a/css/tablet.css
+++ b/css/tablet.css
@@ -7,9 +7,9 @@
         padding-top: 0;
         padding-bottom: 0;
     }
-    .icon-box {
-        display: none;
-    }
+    /* .icon-box { */
+        /* display: none; */
+    
 
     /* Header */
 
