--- a/css/mobile.css
+++ b/css/mobile.css
@@ -11,7 +11,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        display: none;
+        /* display: none; */
         height: 112px; 
         background: #F4F4FD;
         border-radius: 4px;
