--- a/css/tablet.css
+++ b/css/tablet.css
@@ -7,8 +7,17 @@
         padding-top: 0;
         padding-bottom: 0;
     }
-    /* .icon-box { */
+    .icon-box { 
+        display: flex;
+        justify-content: center;
+        align-items: center;
         /* display: none; */
+        height: 112px; 
+        background: #F4F4FD;
+        border-radius: 4px;
+        background-color: var(--footer-logo-part); 
+         margin-bottom: 8px;
+    }
     
 
     /* Header */
