--- a/css/desktop.css
+++ b/css/desktop.css
@@ -49,17 +49,33 @@
         width: calc((100%-24px*3)/4);
     }
     
-    .icon-box {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        height: 112px; 
-        background: #F4F4FD;
+    .advantages .chapter::before {
+        content: '';
+        display: block;
+        height: 112px;
+        margin-bottom: 8px;
+        background-color: var(--footer-logo-part);
         border-radius: 4px;
-        background-color: var(--footer-logo-part); 
-         margin-bottom: 8px;
+        background-repeat: no-repeat;
+        background-position: center;
     }
+    
+    .advantages .chapter:nth-child(1)::before {
+        background-image: url(../images/icons.svg/antenna\ 1.svg);
+    }
+    
+    .advantages .chapter:nth-child(2)::before {
+        background-image: url(../images/icons.svg/clock\ 1.svg);
+    }
+    
+    .advantages .chapter:nth-child(3)::before {
+        background-image: url(../images/icons.svg/diagram\ 1.svg);
+    }
+    
+    .advantages .chapter:nth-child(4)::before {
+        background-image: url(../images/icons.svg/astronaut\ 1.svg);
+    }
+
 
     /* Works */
 
