--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ img {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    
+    color: var(--logo-part-color);
     /* margin-bottom: 48px; */
     text-decoration-line: none;
 }
