--- a/css/styles.css
+++ b/css/styles.css
@@ -317,7 +317,7 @@ img {
 .section.hero {
     padding-top: 112px;
     padding-bottom: 112px;
-    max-width: 428px;
+    /* max-width: 428px; */
     /* width: 100%; */
     height: 432px;
     margin-left: auto;
