--- a/css/tablet.css
+++ b/css/tablet.css
@@ -12,7 +12,9 @@
         text-align: left; 
     }
     
-
+    .trek {
+        text-align: center;
+    }
     /* Header */
 
     .btn-menu-burger {
